ChangeLog 'ClusteringSuite'

YYYY-MM-DD  John Doe  <johndoe@example.com>

	* myfile.ext (myfunction): my changes made
	additional changes

	* myfile.ext (unrelated_change): my changes made
	to myfile.ext but completely unrelated to the above

	* anotherfile.ext (somefunction): more changes

2014-12-15 German Llort <german.llort@bsc.es>
	* Added scripts tdbscan-mass-submit and tdbscan-process-results, 
	to submit experiments to the system queue and parse the results

	* Fixed bug in tdbscan-launcher when parsing the environment to 
	detect known system managers

	* Fixed bug in tdbscan-launcher when parsing the available resources
	to generate the topology

	* Fixed paths of the files that are generated in the experiments scripts 
	so that the outputs are generated in the current directory

2014-12-11 German Llort <german.llort@bsc.es>
	* Added support for BlueWaters' PBS system manager in
	tdbscan-launcher.py

2014-12-11 German Llort <german.llort@bsc.es>
	* Modified script tdbscan-sweep to run the same experiment several times

	* Added new statistics to the final report of tdbscan-sweep, and make averages of all backends 

	* Fixed bug in tdscan-launcher when parsing the hostfile from the LSF system manager

2014-12-10 Juan Gonzalez <juan.gonzalez@bsc.es>
	* Solved a bug in 'ClusteredStatesPRVGenerator' that caused a duplicity
	of the clusters opening event

	* Fixed a regression in 'TraceData' when using 'CompleteBursts' and
	'ClusteringBursts', that broke the correct behaviour of the 'BurstClustering'
	application

2014-12-10 German Llort <german.llort@bsc.es>
	* Added suffix .sh to the wrapper scripts BurstClustering and ClustersSequenceScore 
	to avoid compilation problems.

	* TDBSCAN now prints timing statistics 

	* Added a sweep script to run multiple TDBSCAN experiments

2014-12-04 German Llort <german.llort@bsc.es>
	* Changed obsolete macro AM_PROG_CC_STDC to AC_PROG_CC in
	configure.ac.template
